--- a/Write Up/assignment1WriteUp.tex
+++ b/Write Up/assignment1WriteUp.tex
@@ -5,6 +5,8 @@
 \usepackage[utf8x]{inputenc}
 \usepackage[T1]{fontenc}
 
+\usepackage{multicol}
+
 %% Sets page size and margins
 \usepackage[a4paper,top=3cm,bottom=2cm,left=3cm,right=3cm,marginparwidth=1.75cm]{geometry}
 
@@ -33,113 +35,204 @@ project completion. \\ \\ It explores Uniform Cost Search, and the Misplaced Til
 Manhattan Distance heursitics applied to A*. My lanugage of choice was Python
 (version 3), and the full code for the project is included.
 
-\section{The Code}
-Relevant files:
-\begin{itemize}
-\item nPuzzle.py
-\item TreeNode.py
-\end{itemize}
-
-Running is as follows:
-\begin{verbatim}
-python3 nPuzzle.py
-\end{verbatim}
-
 \section{Comparison of Algorithms}
 The three algorithms implemented are as follows: Uniform Cost Search, A* using
 the Misplaced Tile heuristic, and A* using the Manhattan Distance heuristic.
 
+\subsection{Uniform Cost Search}
+As noted in the initial assignment prompt, \textbf{Uniform Cost Search} is simply A* with
+h(n) hardcoded to 0, and it will only expand the cheapest node, whose cost is in
+g(n). In the case of this assignment, there are no weights to the expansions,
+and each expanded node will have a cost of 1.
+
+\subsection{The Misplaced Tile Heuristic}
+The second algorithm implemented is A* with the \textbf{Misplaced Tile Heuristic}. The
+heuristic looks to the number of ``misplaced'' tiles in a puzzle. For example:
+\begin{verbatim}
+A puzzle:
+[[1, 2, 4],
+ [3, 0, 6],
+ [7, 8, 5]]
+\end{verbatim}
+
+...and it's goal state:
+\begin{verbatim}
+goal state:
+[[1, 2, 3],
+ [4, 5, 6],
+ [7, 8, 0]]
+\end{verbatim}
+
+Not counting 0 (the placeholder for the blank/missing tile), g(n) is set to the
+ number of tiles not in their current goal state position are counted; in this
+ example, g(n) = 3. This assigns a number, where lower is better, to node
+ expansion based on how many misplaced tiles there are after any given position
+ change of the space. When applied to the n-puzzle, queue will expand the node
+ with the cheapest cost, rather than expanding each of the child nodes as
+ Uniform Cost Search would.
+
+ \subsection{The Manhattan Distance Heuristic}
+ The \textbf{Manhattan Distance Heuristic} is similar to the Misplaced Tile
+ Heuristic such that it considers the cost of future expansions and looks at
+ misplaced tiles, but has a different rationale to it. The heuristic considers
+ all of the misplaced tiles \textit{and} the number of tiles away from its goal
+ state position would be. The resulting g(n) is the sum of all the cost of all
+ misplaced tile distances. Using the example above:
+\begin{verbatim}
+A puzzle:
+[[1, 2, 4],
+ [3, 0, 6],
+ [7, 8, 5]]
+
+goal state:
+[[1, 2, 3],
+ [4, 5, 6],
+ [7, 8, 0]]
+
+\end{verbatim}
+Not counting the position of 0, it can be seen that tiles 4, 3, and 5 are out of
+place. Based on their positions in the puzzle and their goal state positions,
+g(n) = 8. 
 \subsection{Comparison of Algorithms on Sample Puzzles}
-There were six puzzles of varying ''difficulty'' given to implement. The easiest
-of the six is a trivial puzzle (already the goal state) and the hardest puzzle
+There were six puzzles of varying difficulty given to implement. The easiest
+of the six is a trivial puzzle (the puzzle being the goal state) and the hardest puzzle
 is impossible to solve (the goal state, but the position of tiles 7 and 8
-swapped). While the feature of user-inputted puzzles supported, this write up
-will only use Dr. Keogh's in examples.
-
-
-\subsection{Mathematic Verification} %some proof that the actual space complexity is
-                                %consistent with the theory space complexity
-
-\section{On Utility of the Two Heuristics}
-
-\section{Closing Thoughts}
-The most interesting thing to me was realizing that as impractical Breadth First Search and
-Depth First Search are in the context of real world problems, they are still the
-heart of most practical feasible algorithms used for such real world problems.
-
-\section{Some examples to get started}
-
-\subsection{How to include Figures}
-
-First you have to upload the image file from your computer using the upload link the project menu. Then use the includegraphics command to include it in your document. Use the figure environment and the caption command to add a number and a caption to your figure. See the code for Figure \ref{fig:frog} in this section for an example.
+swapped). The puzzle configurations themselves can be seen in nPuzzle.py.
+See Figure 1 and Figure 2 for a visual representation of the number of nodes
+expanded and the maximum queue size, respectively. \\ \\ It was found that the
+difference between the three algorithms was relatively negligible when given
+easier puzzles, but the heuristics (and how good the heuristic was) made a
+significant difference in the space complexity when solving more difficult but
+still solvable puzzles. 
 
 \begin{figure}
-\centering
-\includegraphics[width=0.3\textwidth]{frog.jpg}
-\caption{\label{fig:frog}This frog was uploaded via the project menu.}
+  \centering
+  \includegraphics[width=\paperwidth, angle=90]{Number Nodes Expanded.png}
+  \label{Figure 1}
 \end{figure}
 
-\subsection{How to add Comments}
+\begin{figure}
+  \centering
+  \includegraphics[width=\paperwidth, angle=90]{Maximum Queue Size.png}
+  \label{Figure 2}
+\end{figure}
 
-Comments can be added to your project by clicking on the comment icon in the toolbar above. % * <john.hammersley@gmail.com> 2016-07-03T09:54:16.211Z:
-%
-% Here's an example comment!
-%
-To reply to a comment, simply click the reply button in the lower right corner of the comment, and you can close them when you're done.
+\section{Mathematic Verification} %some proof that the actual space complexity is
+                                %consistent with the theory space complexity
+\section{Example Traceback}
+This section is the output (in three columns) from the assignment on puzzle 3,
+Doable, for Uniform Cost Search and the Misplaced Tile heuristic. \\
 
-Comments can also be added to the margins of the compiled PDF using the todo command\todo{Here's a comment in the margin!}, as shown in the example on the right. You can also add inline comments:
+\begin{multicols}{3}
+  [
+  Algorithm: Uniform Cost Search, Puzzle: Doable
+  Nodes expanded: 30, Max queue size: 16
+  ]
+\begin{verbatim}
 
-\todo[inline, color=green!40]{This is an inline comment.}
+[4, 1, 2]
+[5, 3, 0]
+[7, 8, 6]
 
-\subsection{How to add Tables}
+[4, 0, 2]
+[5, 1, 3]
+[7, 8, 6]
 
-Use the table and tabular commands for basic tables --- see Table~\ref{tab:widgets}, for example. 
+[4, 1, 2]
+[5, 8, 3]
+[7, 0, 6]
 
-\begin{table}
-\centering
-\begin{tabular}{l|r}
-Item & Quantity \\\hline
-Widgets & 42 \\
-Gadgets & 13
-\end{tabular}
-\caption{\label{tab:widgets}An example table.}
-\end{table}
+[1, 5, 2]
+[4, 3, 0]
+[7, 8, 6]
 
-\subsection{How to write Mathematics}
+[1, 5, 2]
+[4, 8, 3]
+[7, 0, 6]
 
-\LaTeX{} is great at typesetting mathematics. Let $X_1, X_2, \ldots, X_n$ be a sequence of independent and identically distributed random variables with $\text{E}[X_i] = \mu$ and $\text{Var}[X_i] = \sigma^2 < \infty$, and let
-\[S_n = \frac{X_1 + X_2 + \cdots + X_n}{n}
-      = \frac{1}{n}\sum_{i}^{n} X_i\]
-denote their mean. Then as $n$ approaches infinity, the random variables $\sqrt{n}(S_n - \mu)$ converge in distribution to a normal $\mathcal{N}(0, \sigma^2)$.
+[1, 5, 2]
+[0, 4, 3]
+[7, 8, 6]
 
+[4, 1, 2]
+[7, 5, 3]
+[8, 0, 6]
 
-\subsection{How to create Sections and Subsections}
+[1, 2, 3]
+[4, 5, 0]
+[7, 8, 6]
 
-Use section and subsections to organize your document. Simply use the section and subsection buttons in the toolbar to create them, and we'll handle all the formatting and numbering automatically.
+[1, 5, 2]
+[4, 0, 3]
+[7, 8, 6]
 
-\subsection{How to add Lists}
+[4, 1, 2]
+[7, 5, 3]
+[0, 8, 6]
 
-You can make lists with automatic numbering \dots
+[4, 1, 2]
+[5, 0, 3]
+[7, 8, 6]
 
-\begin{enumerate}
-\item Like this,
-\item and like this.
-\end{enumerate}
-\dots or bullet points \dots
-\begin{itemize}
-\item Like this,
-\item and like this.
-\end{itemize}
+[1, 2, 0]
+[4, 5, 3]
+[7, 8, 6]
 
-\subsection{How to add Citations and a References List}
+[4, 1, 2]
+[0, 5, 3]
+[7, 8, 6]
 
-You can upload a \verb|.bib| file containing your BibTeX entries, created with JabRef; or import your \href{https://www.overleaf.com/blog/184}{Mendeley}, CiteULike or Zotero library as a \verb|.bib| file. You can then cite entries from it, like this: \cite{greenwade93}. Just remember to specify a bibliography style, as well as the filename of the \verb|.bib|.
+[1, 0, 2]
+[4, 5, 3]
+[7, 8, 6]
 
-You can find a \href{https://www.overleaf.com/help/97-how-to-include-a-bibliography-using-bibtex}{video tutorial here} to learn more about BibTeX.
+[0, 1, 2]
+[4, 5, 3]
+[7, 8, 6]
 
-We hope you find Overleaf useful, and please let us know if you have any feedback using the help menu above --- or use the contact form at \url{https://www.overleaf.com/contact}!
+\end{verbatim}
+\end{multicols}
+\begin{multicols} {3}
+  [
+  Algorithm: Misplaced Tile Heuristic, Puzzle: Doable
+  Nodes expanded: 15, Max queue size: 9
+  ]
+\begin{verbatim}
 
-\bibliographystyle{alpha}
-\bibliography{sample}
+[1, 2, 3]
+[4, 0, 5]
+[7, 8, 6]
+
+[1, 2, 3]
+[4, 5, 0]
+[7, 8, 6]
+
+[1, 5, 2]
+[4, 0, 3]
+[7, 8, 6]
+
+[1, 2, 0]
+[4, 5, 3]
+[7, 8, 6]
+
+[4, 1, 2]
+[0, 5, 3]
+[7, 8, 6]
+
+[1, 0, 2]
+[4, 5, 3]
+[7, 8, 6]
+
+[0, 1, 2]
+[4, 5, 3]
+[7, 8, 6]
+
+\end{verbatim}
+\end{multicols}
+
+%\section{Closing Thoughts}
+% The most interesting thing to me was realizing that as impractical Breadth First Search and
+% Depth First Search are in the context of real world problems, they are still the
+% heart of some practical, feasible algorithms used for such real world problems.
 
 \end{document}
