--- a/Write Up/coverSheet.tex
+++ b/Write Up/coverSheet.tex
@@ -14,11 +14,14 @@
 	In completing this assignment I consulted:
 	\begin{itemize}
 		\item The Blind Search and Heuristic Search lecture slides and notes annotated from lecture.
-        \item Python 2.7.14, 3.5, and 3.6 Documentation. This is the URL to the Table of Contents of 2.7.14:  https://docs.python.org/2/contents.html
+        \item Python 2.7.14, 3.5, and 3.6 Documentation. This is the URL to the
+          Table of Contents of 2.7.14:  https://docs.python.org/2/contents.html
+          \item For the randomly generated puzzles: http://www.puzzlopia.com/puzzles/puzzle-8/play
 	\end{itemize}
 	All important code is original. Unimportant subroutines that are not completely original are\ldots
 	\begin{itemize}
-		\item Not applicable.
+  \item All subroutines used from \textbf{heapq}, to handle the node structure of states.
+  \item All subroutines used from \textbf{copy}, to deepcopy and correctly modify states.
 	\end{itemize}
 \end{titlepage}
 \end{document}
